src/objects/Business_Driver__c.object
<CustomObject>
    <description>TOOLKIT: An object to capture business drivers related to a release and a capability.</description>
    <fields>
        <fullName>Business_Driver__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Driver</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capability_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Business Drivers</relationshipLabel>
        <relationshipName>Business_Drivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Business Driver</relationshipLabel>
        <relationshipName>Business_Driver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Business Drivers</relationshipLabel>
        <relationshipName>Business_Drivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_Lever__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Value Lever</label>
        <referenceTo>Business_Driver__c</referenceTo>
        <relationshipLabel>Associated Drivers</relationshipLabel>
        <relationshipName>Business_Drivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_Lever_text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value Lever</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Business Driver</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Driver__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>KM1</fullName>
        <columns>NAME</columns>
        <columns>Business_Driver__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>contains</operation>
            <value>Knowledge</value>
        </filters>
        <label>KM1</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>